--- a/Lena/Web.config
+++ b/Lena/Web.config
@@ -17,7 +17,7 @@
   <system.web>
 
     <authentication mode="Forms">
-      <forms defaultUrl="/Member/Index" loginUrl="/Home/Login" timeout="30" slidingExpiration="true" >
+      <forms defaultUrl="/Member/Index" loginUrl="/Home/Login" timeout="30" slidingExpiration="true">
         
       </forms>
     </authentication>
@@ -27,32 +27,17 @@
 
     <membership>
       <providers>
-        <clear/>
-        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" 
-             connectionStringName="LenaDBEntities" 
-             enablePasswordRetrieval="false" 
-             enablePasswordReset="true" 
-             requiresQuestionAndAnswer="true" 
-             applicationName="/" 
-             requiresUniqueEmail="true" 
-             passwordFormat="Hashed" 
-             maxInvalidPasswordAttempts="5" 
-             minRequiredPasswordLength="3" 
-              minRequiredNonalphanumericCharacters="0" 
-             passwordAttemptWindow="10" 
-             passwordStrengthRegularExpression=""/>
+        <clear />
+        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="LenaDBEntities" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="true" applicationName="/" requiresUniqueEmail="true" passwordFormat="Hashed" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="3" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" passwordStrengthRegularExpression="" />
       </providers>
     </membership>
 
 
     <roleManager>
       <providers>
-        <clear/>
-        <add name="AspNetSqlRoleProvider" 
-             connectionStringName="LenaDBEntities" 
-             applicationName="/" type="System.Web.Security.SqlRoleProvider, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
-        <add name="AspNetWindowsTokenRoleProvider" 
-             applicationName="/" type="System.Web.Security.WindowsTokenRoleProvider, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
+        <clear />
+        <add name="AspNetSqlRoleProvider" connectionStringName="LenaDBEntities" applicationName="/" type="System.Web.Security.SqlRoleProvider, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add name="AspNetWindowsTokenRoleProvider" applicationName="/" type="System.Web.Security.WindowsTokenRoleProvider, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </providers>
     </roleManager>
 
@@ -83,8 +68,17 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
+
+
     <add name="LenaDBEntities" connectionString="Data Source=.;initial catalog=LenaDB;integrated security=True;MultipleActiveResultSets=True" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+
+
+
+
+
+    <add name="LenaDBManagerEntities" connectionString="metadata=res://*/Models.LenaManagerModel1.csdl|res://*/Models.LenaManagerModel1.ssdl|res://*/Models.LenaManagerModel1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=LenaDBManager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
